<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易涂</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_back">BACK</string>
    <string name="str_yitu">易涂</string>
    <string name="str_canvas_setting">画布设置</string>
    <string name="canvas_width">宽度</string>
    <string name="canvas_height">高度</string>
    <string name="str_default_canvas_size">1024</string>
    <string name="str_normal_on_off">常用开关</string>
    <string name="str_screen_on">画图时保持屏幕常亮</string>
    <string name="str_night_model">夜间模式</string>
    <string name="str_shake_start">摇一摇启动应用</string>
    <string name="str_setting_content">设置内容</string>
    <string name="str_others">其他</string>
    <string name="str_user_guide">用户指引</string>
    <string name="str_about">关于</string>
    <string name="str_normal_model">常用模板</string>
    <string name="str_my_works">我的作品</string>
    <string name="str_diy">自定义</string>
    <string name="str_exit">退出</string>
    <string name="str_settings">设置</string>
    <string name="str_canvas_preview">画 布 预 览</string>
    <string name="str_no_works">还木有任何作品哦</string>
    <string name="str_share">分享到</string>
    <string name="str_alert">温馨提示</string>
	<string name="str_positive">确定</string>
	<string name="str_negative">取消</string>
	<string name="str_clear_canvas">是否清空画布？</string>
	<string name="str_has_saved">已保存</string>
	<string name="str_edit">编辑</string>
	<string name="str_delete">删除</string>
	<string name="size">大小</string>
	<string name="str_alpha">透明</string>
	<string name="str_notice">提示</string>
	<string name="str_progress">0/0</string>
	<string name="share_email">邮件</string>
	<string name="share_message">短信</string>
	<string name="share_renren">人人网</string>
	<string name="share_qzone">qq空间</string>
	<string name="share_sinaweibo">新浪微博</string>
</resources>