<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_border_style"
        android:orientation="vertical"
        android:padding="3dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialogtitle"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/str_notice"
            android:textColor="#ee000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/str_clear_canvas"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/but_clear_positive"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:background="@drawable/button_clear_style"
                android:text="@string/str_positive" />

            <Button
                android:id="@+id/but_clear_negative"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/button_clear_style"
                android:text="@string/str_negative" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>