<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f3f3"
    android:orientation="vertical" >

    <cn.edu.chd.view.YiTitleBar
        android:id="@+id/ytb_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp" >
    </cn.edu.chd.view.YiTitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_canvas_setting"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#55000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:paddingBottom="5dp" >

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:text="@string/canvas_width"
                android:textColor="#000" />

            <SeekBar
                android:id="@+id/seekbar_canvas_size_width"
                style="@style/yituSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1000" />

            <TextView
                android:id="@+id/tv_canvas_size_width"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/str_default_canvas_size"
                android:textColor="#55000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/canvas_height"
                android:textColor="#000" />

            <SeekBar
                android:id="@+id/seekbar_canvas_size_height"
                style="@style/yituSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1000" />

            <TextView
                android:id="@+id/tv_canvas_size_height"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:text="@string/str_default_canvas_size"
                android:textColor="#55000000" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/str_normal_on_off"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#55000000" />

        <cn.edu.chd.view.YiSettingButton
            android:id="@+id/ysb_screen_always_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >
        </cn.edu.chd.view.YiSettingButton>

        <cn.edu.chd.view.YiSettingButton
            android:id="@+id/ysb_shake_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >
        </cn.edu.chd.view.YiSettingButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_others"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#55000000" />

        <Button
            android:id="@+id/but_user_guide"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:background="@drawable/setting_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/str_user_guide"
            android:textColor="#000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/but_share"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:background="@drawable/setting_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/str_share"
            android:textColor="#000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/but_about"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:background="@drawable/setting_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/str_about"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>