<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashActivity" >

	<cn.edu.chd.view.YiTitleBar 
	    android:id="@+id/ytb_choose_model"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    ></cn.edu.chd.view.YiTitleBar>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="35dp"
	    android:orientation="horizontal"
	    android:background="#efebef"
	    >
	     <TextView
            android:id="@+id/choose_model_title1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/str_normal_model"
            android:textColor="#000000"
            android:textSize="15.0dip" />
        <TextView
            android:id="@+id/choose_model_title2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/str_my_works"
            android:textColor="#000000"
            android:textSize="15.0dip" />
        <TextView
            android:id="@+id/choose_model_title3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/str_diy"
            android:textColor="#000000"
            android:textSize="15.0dip" />
	</LinearLayout>
	<ImageView
        android:id="@+id/tab_cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/line" />

    <android.support.v4.view.ViewPager
        android:id="@+id/choose_model_vPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#fff"
        android:flipInterval="30"
        android:persistentDrawingCache="animation"
         />
</LinearLayout>






